# src/backend/generated/src/openapi_server/models/annotation_request_size.py
@@ -1,0 +1,94 @@
+# coding: utf-8
+
+"""
+    3D Annotation API with JWT
+
+    A JWT-Protected API for 3D Object Annotation
+
+    The version of the OpenAPI document: 1.0.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
+
+    Do not edit the class manually.
+"""  # noqa: E501
+
+
+from __future__ import annotations
+import pprint
+import re  # noqa: F401
+import json
+
+
+
+
+from pydantic import BaseModel, ConfigDict, Field, StrictFloat, StrictInt
+from typing import Any, ClassVar, Dict, List, Optional, Union
+try:
+    from typing import Self
+except ImportError:
+    from typing_extensions import Self
+
+class AnnotationRequestSize(BaseModel):
+    """
+    AnnotationRequestSize
+    """ # noqa: E501
+    radius: Optional[Union[StrictFloat, StrictInt]] = Field(default=None, description="Radius (if the geometry is a sphere)")
+    width: Optional[Union[StrictFloat, StrictInt]] = Field(default=None, description="Width (if applicable)")
+    height: Optional[Union[StrictFloat, StrictInt]] = Field(default=None, description="Height (if applicable)")
+    __properties: ClassVar[List[str]] = ["radius", "width", "height"]
+
+    model_config = {
+        "populate_by_name": True,
+        "validate_assignment": True,
+        "protected_namespaces": (),
+    }
+
+
+    def to_str(self) -> str:
+        """Returns the string representation of the model using alias"""
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        """Returns the JSON representation of the model using alias"""
+        # TODO: pydantic v2: use .model_dump_json(by_alias=True, exclude_unset=True) instead
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        """Create an instance of AnnotationRequestSize from a JSON string"""
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        """Return the dictionary representation of the model using alias.
+
+        This has the following differences from calling pydantic's
+        `self.model_dump(by_alias=True)`:
+
+        * `None` is only added to the output dict for nullable fields that
+          were set at model initialization. Other fields with value `None`
+          are ignored.
+        """
+        _dict = self.model_dump(
+            by_alias=True,
+            exclude={
+            },
+            exclude_none=True,
+        )
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Dict) -> Self:
+        """Create an instance of AnnotationRequestSize from a dict"""
+        if obj is None:
+            return None
+
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+
+        _obj = cls.model_validate({
+            "radius": obj.get("radius"),
+            "width": obj.get("width"),
+            "height": obj.get("height")
+        })
+        return _obj
+
+
